--- a/01-AdvancedFunctions/index.html
+++ b/01-AdvancedFunctions/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <div style="font-size: 50px">
-        <span>Span 1</span>
-        <span>Span 2</span>
-        <span>Span 3</span>
-    </div>
 
 </body>
 </html>
