--- a/01-AdvancedFunctions/index.html
+++ b/01-AdvancedFunctions/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
+    <div class="container">
+        <p>the quick brown fox jumps over the lazy dog</p>
+        <br>
+        <p>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG</p>
+    </div>
+
 </body>
+
 </html>
