--- a/02-DOMManipulations/index.html
+++ b/02-DOMManipulations/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>DOM Manipulations</title>
+
+    <style>
+        div {
+            border: 1px solid black;
+            border-radius: 2rem;
+            width: max-content;
+            padding: 3rem;
+            margin: 1rem;
+        }
+
+        .btn {
+            font-size: 2.2rem;
+            padding-left: 3rem;
+            padding-right: 3rem;
+        }
+    </style>
 </head>
 <body style="font-size: 2.2rem">
 
-    <button onclick="app()" style="font-size: 2.5rem">Run</button>
-  
+    <button onclick="app()" style="font-size: 2.2rem;
+            margin-left: 2rem; 
+            background-color: lightgreen; 
+            color: black;">Run</button>
+
+    <div>
+        <label>Write something in the input field</label>
+        <input type="text">
+        <button disabled="false">Show it</button>
+    </div>
+    
     <script src="./app.js"></script>
 </body>
 </html>
