--- a/02-DOMManipulations/index.html
+++ b/02-DOMManipulations/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>DOM Manipulations</title>
-
-    <style>
-        div {
-            border: 1px solid black;
-            border-radius: 2rem;
-            width: max-content;
-            padding: 3rem;
-            margin: 1rem;
-        }
-
-        .btn {
-            font-size: 2.2rem;
-            padding-left: 3rem;
-            padding-right: 3rem;
-        }
-    </style>
 </head>
+
 <body style="font-size: 2.2rem">
 
-    <button onclick="app()" style="font-size: 2.2rem;
-            margin-left: 2rem; 
-            background-color: lightgreen; 
-            color: black;">Run</button>
+    <script>
+        window.onload = (() => {
+            var ul = document.createElement('ul');
+            document.body.appendChild(ul);
 
-    <div>
-        <label>Write something in the input field</label>
-        <input type="text">
-        <button disabled="false">Show it</button>
-    </div>
-    
-    <script src="./app.js"></script>
+            var li1 = document.createElement('li');
+            var li2 = document.createElement('li');
+
+            li1.textContent = 'First list item!';
+            li2.textContent = 'Second list item!';
+
+            ul.appendChild(li1);
+            ul.appendChild(li2);
+
+            function hide(e) {
+                // e.target refers to the clicked <li> element
+                // This is different than e.currentTarget which would refer to the parent <ul> in this context
+                e.target.style.visibility = 'hidden';
+            }
+
+            // Attach the listener to the list
+            // It will fire when each <li> is clicked
+            ul.addEventListener('click', hide, false);
+        })();
+    </script>
+
 </body>
+
 </html>
