--- a/03-UnitTesting/index.html
+++ b/03-UnitTesting/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <script src="app.js"></script>
+    <script type="module" src="./my_modules/solve.js"></script>
 </body>
 
 </html>
