--- a/03-UnitTesting/index.html
+++ b/03-UnitTesting/index.html
@@ -6,8 +6,11 @@
     <title>Unit Testing</title>
 </head>
 
-<body>
-    <script type="module" src="./my_modules/solve.js"></script>
+<body >
+    
+    <button onclick="main()" style="font-size: 2.2rem">Click Me</button>
+    <script src="./app.js"></script>
+
 </body>
 
 </html>
